# WebScraper

./: .project  README  WebScraper.cabal
.dist-buildwrapper/: WebScraper.cabal
.dist-buildwrapper/src/: .DictCNScraper.hs.bwinfo  .DictCNScraper.hs.bwusage  .Main.hs.bwinfo  .Main.hs.bwusage  .StarDictParser.hs.bwinfo  .StarDictParser.hs.bwusage  .VOAParser.hs.bwinfo  .VOAParser.hs.bwusage  .VOAScraper.hs.bwinfo  .VOAScraper.hs.bwusage  DictCNScraper.hs  StarDictParser.hs  html  low_frequency_words.txt  voafeed.txt  web_scrape.s3db
src/: DictCNScraper.hs  Main.hs  StarDictParser.hs  VOAParser.hs  VOAScraper.hs  low_frequency_words.txt
