name:           WebScraper
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         jon

executable WebScraper
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parallel-io,
                   old-time,
                   HDBC-sqlite3,
                   HDBC,
                   containers,
                   MaybeT,
                   HandsomeSoup,
                   hxt
  ghc-options:     -Wall
  other-modules:   VOAScraper

